--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "gatsby-starter-react-bootstrap",
+  "name": "Reign Gym",
   "private": true,
-  "description": "A starter that includes and configures react-bootstrap and react-icons, along with SASS handling. ",
+  "description": " ",
   "version": "0.1.0",
-  "author": "Billy Jacoby <billyjacoby@gmail.com>",
+  "author": "Kevin Cheung ",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.3.34",
-    "gatsby-image": "^2.0.41",
+    "gatsby-image": "^2.4.9",
+    "gatsby-plugin-layout": "^1.3.6",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
@@ -21,7 +26,9 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.6.1"
+    "react-icons": "^3.6.1",
+    "react-reveal": "^1.2.2",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
@@ -42,10 +49,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": " "
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
-  "homepage": "https://billyjacoby.github.io/gatsby-react-bootstrap-starter/"
+  "homepage": " "
 }
