--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reach/router": "^1.3.4",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.3.34",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-layout": "^1.3.6",
     "gatsby-plugin-manifest": "^2.0.29",
@@ -20,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-zopfli": "^1.3.2",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-sharp": "^2.1.18",
     "node-sass": "^4.12.0",
